--- a/templates/game.html
+++ b/templates/game.html
@@ -10,23 +10,16 @@
     <table width="50%">
 
     <form action="/madlib" method=GET name="madlib-info">
-    <tr>
-        <td>Color:</td>
-        <td><input type="text" name="color" required></td>
-    </tr>
-    <tr>
-        <td>Person:</td>
-        <td><input type="text" name="person" required></td>
-    </tr>
-    <tr>
-        <td>Noun:</td>
-        <td><input type="text" name="noun" required></td>
-    </tr>
-    <tr>
-        <td>Adjective:</td>
-        <td><input type="text" name="adj" required></td>
-    </tr>
-        <td colspan="2"><input type="submit"></td>
+        {% for key in pairs %}
+            <tr>
+                <td>{{ key }}</td>
+                <td><input type="text" name="{{ pairs[key] }}" 
+                           required></td>
+            </tr>
+        {% endfor %}
+        <tr>
+            <td colspan="2"><input type="submit"></td>
+        </tr>
 
     </form>
     </table>
@@ -34,18 +27,21 @@
 
 </body>
 </html>
+<!-- 
+    pairs = {
+        adjective1: adj1,
+        noun1: n1,
+        past_verb: pv,
+        adverb1: adv1,
+        adjective2: adj2,
+        noun2: n2,
+        noun3: n3,
+        adjective3: adj3,
+        verb1: v1,
+        adverb2: adv2,
+        past_verb2: pv2,
+        adjective4: adj4
+        } -->
 
-pairs = {
-    adjective1: adj1, 
-    noun1: n1,
-    past_verb: pv,
-    adverb1: adv1,
-    adjective2: adj2,
-    noun2: n2,
-    noun3: n3,
-    adjective3: adj3
-    verb1: v1,
-    adverb2: adv2,
-    past_verb2: pv2,
-    adjective4: adj4
-}
+<!-- 
+        http://localhost:5000/madlib?n3=pickle&n1=solar+system&adv2=slowly&adv1=quickly&n2=cupcake&pv=gallavanted&adj1=fuzzy&v1=throw&adj3=ephemeral&adj2=squiggly&adj4=explosive&pv2=cartwheeled -->
