--- a/templates/madlib.html
+++ b/templates/madlib.html
@@ -4,7 +4,7 @@
 
 
     <div style="width:50%">
-        Today I went to the zoo. I saw a {{ adjective1 }} {{ noun1 }} jumping up and down in its tree. It {{ past_verb }} {{ adverb1 }} through the large tunnel that led to its {{ adjective2 }} {{ noun2 }}. I got some peanuts and passed them through the cage to a gigantic gray {{ noun3 }} towering above my head. Feeding that animal made me hungry. I went to get a {{ adjective3 }} scoop of ice cream. It filled my stomach. Afterwards I had to {{ verb2 }} {{ adverb2 }} to catch our bus. When I got home I {{ past_verb2 }} my {{ adjective4 }} day at the zoo.
+        Today I went to the zoo. I saw a {{ adjective1 }} {{ noun1 }} jumping up and down in its tree. It {{ past_verb1 }} {{ adverb1 }} through the large tunnel that led to its {{ adjective2 }} {{ noun2 }}. I got some peanuts and passed them through the cage to a gigantic gray {{ noun3 }} towering above my head. Feeding that animal made me hungry. I went to get a {{ adjective3 }} scoop of ice cream. It filled my stomach. Afterwards I had to {{ verb2 }} {{ adverb2 }} to catch our bus. When I got home I {{ past_verb2 }} my {{ adjective4 }} day at the zoo.
     </div>
     
 {% endblock %}
