checkbox coolness alalmost works

--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -3,7 +3,7 @@
 {% extends "base.html" %}
 {% block title %}This is a Compliment{% endblock %} 
 {% block content %}
-    Hi {{ person }}! I think you're {{ compliment }}!
+    Hi {{ person }}! You think you're {{ coolness }}? <br>I think you're {{ compliment }}!
     <p></p>
     <form method=GET name="play-game" action="/game">
       Wanna play a game?
