--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,8 +5,11 @@
 <h1>Hi There!</h1>
 
 <form action="/greet">
-  What is your name? <input type="text" name="person">
+  What is your name? <input type="text" name="person"><br>
+  {{ input_list }}
   <input type="submit">
 </form>
 
 {% endblock %}
+
+
